--- a/style.css
+++ b/style.css
@@ -39,15 +39,47 @@ nav ul li{
     font-size: 1.3rem;
 }
 
+.container{
+    min-height:72vh;
+    background-color: black;
+    color:white;
+    display:flex;
+    margin:23px auto;
+    font-family:'Varela Round', sans-serif ;
+    width:70%;
+    border-radius:12px;
+    padding:34px;
+    background-image: url('bg.jpg');
+}
 
+.bottom{
+    position: sticky;
+    bottom:0;
+    background-color: black;
+    color:white;
+    height:130px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:column;
+}
 
+.icons{
+    margin-top:14px;
 
+    
+}
 
+.icons i{
+  cursor:pointer;
+  
 
+}
 
-
-
-
+#myprogressbar{
+    width: 80vw;
+    cursor:pointer;
+}
 
 
 
